; ModuleID = '/home/carl/AnghaBench/freebsd/sys/cddl/contrib/opensolaris/uts/common/fs/zfs/extr_abd.c_abd_iter_scatter_chunk_offset.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/cddl/contrib/opensolaris/uts/common/fs/zfs/extr_abd.c_abd_iter_scatter_chunk_offset.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.abd_iter = type { i64, %struct.TYPE_6__* }
%struct.TYPE_6__ = type { %struct.TYPE_5__ }
%struct.TYPE_5__ = type { %struct.TYPE_4__ }
%struct.TYPE_4__ = type { i64 }

@zfs_abd_chunk_size = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.abd_iter*)* @abd_iter_scatter_chunk_offset to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @abd_iter_scatter_chunk_offset(%struct.abd_iter* %0) #0 {
  %2 = alloca %struct.abd_iter*, align 8
  store %struct.abd_iter* %0, %struct.abd_iter** %2, align 8
  %3 = load %struct.abd_iter*, %struct.abd_iter** %2, align 8
  %4 = getelementptr inbounds %struct.abd_iter, %struct.abd_iter* %3, i32 0, i32 1
  %5 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %6 = call i32 @abd_is_linear(%struct.TYPE_6__* %5)
  %7 = icmp ne i32 %6, 0
  %8 = xor i1 %7, true
  %9 = zext i1 %8 to i32
  %10 = call i32 @ASSERT(i32 %9)
  %11 = load %struct.abd_iter*, %struct.abd_iter** %2, align 8
  %12 = getelementptr inbounds %struct.abd_iter, %struct.abd_iter* %11, i32 0, i32 1
  %13 = load %struct.TYPE_6__*, %struct.TYPE_6__** %12, align 8
  %14 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %13, i32 0, i32 0
  %15 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %14, i32 0, i32 0
  %16 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %15, i32 0, i32 0
  %17 = load i64, i64* %16, align 8
  %18 = load %struct.abd_iter*, %struct.abd_iter** %2, align 8
  %19 = getelementptr inbounds %struct.abd_iter, %struct.abd_iter* %18, i32 0, i32 0
  %20 = load i64, i64* %19, align 8
  %21 = add i64 %17, %20
  %22 = load i64, i64* @zfs_abd_chunk_size, align 8
  %23 = urem i64 %21, %22
  ret i64 %23
}

declare dso_local i32 @ASSERT(i32) #1

declare dso_local i32 @abd_is_linear(%struct.TYPE_6__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
